# apex

./: README.md  log.txt  main.py  pyproject.toml
agents/: base_agent.py  heuristic_agent.py  playback_agent.py  ppo_agent.py
server/: client.py  server.py
sim/: car.py  track.py
training/: evolve.py  gym_env.py  sevolve.py  train_rl.py
weights/: evo_best.npy
