[project]
name = "apex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastf1>=3.8.1",
    "gymnasium>=1.2.3",
    "numpy>=2.4.3",
    "pygame>=2.6.1",
    "stable-baselines3>=2.7.1",
    "websockets>=16.0",
]
